/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.deviceinfo;

import "google/protobuf/timestamp.proto";
import "src/devtools/deviceinfra/api/deviceinfo/proto/device_config.proto";
import "src/devtools/deviceinfra/api/deviceinfo/proto/device_dimension.proto";
import "src/devtools/deviceinfra/api/deviceinfo/proto/device_info.proto";

option java_package = "com.google.devtools.deviceinfra.api.deviceinfo.proto";
option java_outer_classname = "DeviceDescriptorProto";

// Device descriptor with a timestamp.
message DeviceDescriptorWithTimestamp {
  // REQUIRED
  DeviceDescriptor device_descriptor = 1;

  // REQUIRED
  // Device manager local time when generating device descriptor.
  google.protobuf.Timestamp timestamp = 2;
}

// All information of a device managed by device manager.
message DeviceDescriptor {
  // REQUIRED
  // Device UUID in UDCluster.
  string device_uuid = 1;

  // REQUIRED
  // Device detailed information generated by device manager.
  DeviceInfo device_info = 2;

  // REQUIRED
  // Subset of device detailed information in string multimap format for device
  // allocation.
  DeviceDimensions device_dimensions = 3;

  // REQUIRED
  // Device configurations set from lab console by users.
  DeviceConfig device_config = 4;
}
